# DIF

./: .gitignore  Cargo.toml
dif_core/: Cargo.toml
dif_core/src/: cell.rs  components.rs  container.rs  lib.rs  sync.rs
dif_macros/: Cargo.toml
dif_macros/src/: dynamic_service.rs  helpers.rs  id.rs  lib.rs  service.rs
dif_tests/: Cargo.toml
dif_tests/src/: dependent_dependencies.rs  injectables.rs  lib.rs
dif_tests/src/tests/: dependency_ordering.rs  get.rs  global.rs  mod.rs  produce.rs  register.rs  use_instance.rs
src/: lib.rs  logger.rs  main.rs
